--- a/pagina.css
+++ b/pagina.css
@@ -3,7 +3,7 @@ h3 {
     background-color: orangered;
     margin: 0;        
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+    font-size: small;
 }
 
 body {
